--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -13,6 +13,10 @@
     width: 100%;
 }
 
+#image {
+    width: 100%;
+}
+
 @media (max-width: 800px) {
     header h1 {
         font-size: 1.75em!important;
