エラー時の動きを追加

--- a/pages/style/image.css
+++ b/pages/style/image.css
@@ -10,3 +10,11 @@
 #image-wrapper:not([data-view="loading"]) #loading {
     display: none;
 }
+
+#error {
+    color: red;
+}
+
+#image-wrapper:not([data-view="error"]) #error {
+    display: none;
+}
