--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -34,6 +34,14 @@ header a {
     display: none;
 }
 
+#error {
+    color: red;
+}
+
+#image-wrapper:not([data-view="error"]) #error {
+    display: none;
+}
+
 @media (max-width: 800px) {
     header h1 {
         font-size: 1.75em!important;
