URLがおかしい時inputの色が変わるように

--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -8,6 +8,11 @@ header a {
     font-size: 1em;
 }
 
+.input-error {
+    border: 3px solid #ff5c5c;
+    background-color: #ffc3c3;
+}
+
 .vertical {
     display: flex;
     column-gap: 1em;
